adding ordered and unordered list with attributes.

--- a/main.html
+++ b/main.html
@@ -7,8 +7,22 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<!-- the entire body must be written by student -->
+<h2>Things to buy:- </h2>
+<ol data-ns-test="shoppingList">
+	<li>Stocks</li>
+	<li>Food</li>
+	<li>Save Money</li>
+</ol>
+
+<h2>Countries to visit:- </h2>
+<ul data-ns-test="holidayList">
+	<li>Norway</li>
+	<li>Switzerland</li>
+	<li>United Arab Emirates</li>
+</ul>
+
+<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
