changing according to the test

--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 <body>
 <!-- the entire body must be written by student -->
 <ul>
-	<li>Norway</li>
-	<li>Switzerland</li>
-	<li>United Arab Emirates</li>
+	<li data-ns-test='holidayList'>Norway</li>
+	<li data-ns-test='holidayList'>Switzerland</li>
+	<li data-ns-test='holidayList'>United Arab Emirates</li>
 </ul>
 	
 <ol>
-	<li>Stocks</li>
-	<li>Food</li>
-	<li>Save Money</li>
+	<li data-ns-test='shoppingList'>Stocks</li>
+	<li data-ns-test='shoppingList'>Food</li>
+	<li data-ns-test='shoppingList'>Save Money</li>
 </ol>
 
 
